completed style carousel, created new carousel for productsOnSale, implemented rendering and alert in login e register

--- a/front-end/src/css/main.css
+++ b/front-end/src/css/main.css
@@ -12681,5 +12681,12 @@ textarea.form-control-lg {
     display: none;
   }
 }
+.slick-next:before {
+  color: #f48f02 !important;
+}
+
+.slick-prev:before {
+  color: #f48f02 !important;
+}
 
 /*# sourceMappingURL=main.css.map */
