--- a/front-end/src/css/main.css
+++ b/front-end/src/css/main.css
@@ -12714,4 +12714,38 @@ textarea.form-control-lg {
   box-shadow: none !important;
 }
 
+.profile-container-page {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-image-page {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.profile-container-nav {
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-image-nav {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
 /*# sourceMappingURL=main.css.map */
