--- a/front-end/src/scss/main.scss
+++ b/front-end/src/scss/main.scss
@@ -336,3 +336,37 @@ $theme-colors: map-merge($custom-theme-colors, $theme-colors);
   outline: none !important;
   box-shadow: none !important;
 }
+
+.profile-container-page {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-image-page {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.profile-container-nav {
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-image-nav {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
